--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "multer": "^1.4.2",
     "multer-storage-cloudinary": "^4.0.0",
     "node-sass-middleware": "^0.11.0",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "socket.io": "^2.3.0",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
     "nodemon": "^1.12.1"
